<resources>
    <string name="app_name">Vendas</string>

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="age">Idade</string>
    <string name="man">Homem</string>
    <string name="woman">Mulher</string>
    <string name="other">Outro</string>
    <string name="save">Salvar</string>
    <string name="home_hello">Olá, %s</string>
    <string name="home_new_transaction">Nova compra</string>
    <string name="home_bank_balance">R$ 0,00</string>
    <string name="home_balance_available">Saldo disponivel</string>
    <string name="home_next_invoice">Próxima fatura</string>
    <string name="nome_conta">Nome da Conta</string>
    <string name="saldo_conta">Saldo da Conta</string>
    <string name="nome_responsavel">Nome do responsável da cta</string>
    <string name="debito">Débito</string>
    <string name="Credito">Crédito</string>
    <string name="adicinar">depositar</string>
    <string name="depositar">depositar</string>
    <string name="retirar">retirar</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
</resources>